一覧機能、HTML微調整

--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -92,7 +92,7 @@ header{
   // flex-direction: column;
   // align-items: center;
   position: relative;
-  margin: 10px;
+  margin: 10px 0px 0px 50px;
 }
 .item-img {
   width: 33vh;
