--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -48,7 +48,7 @@ header{
 
 
 .store-main{
-  height: 800px;
+  height: 100%;
   width: 100%;
   background-color: #eeeeee;
   display: flex;
@@ -86,6 +86,7 @@ header{
   flex-wrap: wrap;
   // box-sizing: border-box;
 }
+
 .list {
   width: 33vh;
   display: flex;
@@ -107,7 +108,7 @@ header{
   font-size: 2.5vh;
 }
 .item-price {
-  font-size: 1.5vh;
+  font-size: 20px;
   display: flex;
   justify-content: space-between;
 }
@@ -212,6 +213,20 @@ header{
   padding: 15px 20px;
 }
 
+.star-btn {
+  display: flex;
+  align-items: center;
+}
+
+.star-icon {
+  height: 2vh;
+  width: 2vh;
+  margin-right: 0.5vw;
+}
+
+.star-count {
+  font-size: 20px;
+}
 
 
 // .list {
