--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -57,7 +57,7 @@
             </div>
             <div class='cart-item-count'>
               <span class='cart-quantity'><%= cart_item.quantity %>個</span>
-              <%= link_to "削除", cart_item_path(cart_item.item), class: "cart-delete", method: :delete%>
+              <%= link_to "削除", cart_item_path(cart_item.id), class: "cart-delete", method: :delete%>
             </div>
           </div>
           <div class='cart-item-price'>
