--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,9 @@
 <%# <%= render "shared/second-header"%>
+<% @cart_items.each do |cart_item| %>
+  <% @cart_total += (cart_item.item.price)*(cart_item.quantity) %>
+  <% @cart_count += cart_item.quantity %>
+  <% @cart_id = cart_item.cart_id %>
+<% end %>
 
 <div class='transaction-contents'>
   <div class='transaction-main'>
@@ -10,10 +15,10 @@
       <%= image_tag "item-sample.png", class: 'buy-item-img' %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
-          <%= "計何点" %>
+          計：<%= @cart_count %>点
         </h2>
         <div class='buy-item-price'>
-          <p class='item-price-text'>¥<%= '999,999,999' %></p>
+          <p class='item-price-text'>小計 ¥<%= @cart_total %></p>
         </div>
       </div>
     </div>
@@ -25,12 +30,12 @@
         支払金額
       </h1>
       <p class='item-payment-price'>
-        ¥<%= "販売価格" %>
+        ¥<%= @cart_total %>
       </p>
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with model: @order, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= form_with model: [ Cart.find(@cart_id), @order ], url: cart_orders_path(@cart_id), id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
     <%# カード情報の入力 %>
       <div class='credit-card-form'>
         <h1 class='info-input-haedline'>
@@ -69,12 +74,12 @@
           <%= f.text_field :cvc, class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
         </div>
       </div>
-    <%# /カード情報の入力 %>
-    
-
-    <div class='buy-btn'>
-      <%= f.submit "購入" ,class:"buy-red-btn", id:"button" %>
-    </div>
+      <%# /カード情報の入力 %>
+      <div class='buy-btn'>
+        <%= f.hidden_field :quantity, value: @cart_count %>
+        <%= f.hidden_field :total_price, value: @cart_total %>
+        <%= f.submit "購入" ,class:"buy-red-btn", id:"button" %>
+      </div>
     <% end %>
   </div>
 </div>
