バリデーションの実装

--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -85,6 +85,7 @@ header{
   width: calc(100% - 300px);
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 20px;
   // box-sizing: border-box;
 }
 
