--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -36,6 +36,7 @@
     <%# /支払額の表示 %>
 
     <%= form_with model: [ Cart.find(@cart_id), @order ], url: cart_orders_path(@cart_id), id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= render 'shared/error_messages', model: f.object %>
     <%# カード情報の入力 %>
       <div class='credit-card-form'>
         <h1 class='info-input-haedline'>
