--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,22 +1,7 @@
-<%# 下部広告部分 %>
-<div class='ad-footer-contents'>
-  <p class='ad-footer-explain'>
-    だれでもかんたん、人生を変えるフリマアプリ
-  </p>
-  <h2 class='ad-footer-title'>
-    今すぐ無料ダウンロード！
-  </h2>
-  <div class='store-btn'>
-    <%= link_to image_tag("app-store.svg", class:"apple-btn"), "#" %>
-    <%= link_to image_tag("google-play.png", class:"google-btn"), "#" %>
-  </div>
-</div>
-<%# /下部広告部分 %>
-
-<div class='footer'>
+<footer>
   <div class='footer-contents'>
     <div class='furima-details'>
-      <h2 class='footer-content-head'>FURIMAについて</h2>
+      <h2 class='footer-content-head'>ECStoreについて</h2>
       <ul>
         <li><%= link_to '会社概要（運営会社)', "#", class: "footer-link" %></li>
         <li><%= link_to 'プライバシーポリシー', "#", class: "footer-link" %></li>
@@ -25,14 +10,14 @@
       </ul>
     </div>
     <div class='furima-details'>
-      <h2 class='footer-content-head'>FURIMAを見る</h2>
+      <h2 class='footer-content-head'>ECStoreを見る</h2>
       <ul>
         <li><%= link_to 'カテゴリー一覧', "#", class: "footer-link" %></li>
         <li><%= link_to 'ブランド一覧', "#", class: "footer-link" %></li>
       </ul>
     </div>
     <div class='furima-details'>
-      <h2 class='footer-content-head'>FURIMAについて</h2>
+      <h2 class='footer-content-head'>ガイドライン</h2>
       <ul>
         <li><%= link_to 'FURIMAガイド', "#", class: "footer-link" %></li>
         <li><%= link_to 'FURIMAロゴ利用ガイドライン', "#", class: "footer-link" %></li>
@@ -40,6 +25,5 @@
       </ul>
     </div>
   </div>
-  <%= link_to image_tag("furima-logo-white.png", class:"logo-white"), "#" %>
-  <p>© FURIMA</p>
-</div>
+  <p>© ECStore</p>
+</footer>
