--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,7 +1,9 @@
+<%= render "shared/header" %>
+
 <div class="items-sell-contents">
-  <header class="items-sell-header">
+  <%# <header class="items-sell-header">
     <%= link_to image_tag('ECStore-logo.png' , size: '185x50'), "/" %>
-  </header>
+  <%# </header> %>
   <div class="items-sell-main">
   <h2 class="items-sell-title">商品の情報を入力</h2>
   <%= form_with model: @item, local: true do |f| %>
