--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,8 +1,8 @@
-<%# <%= render "shared/header" %>
-
+<%= render "shared/header" %>
+<%# 
 <header class="items-sell-header">
-    <%= link_to image_tag('ECStore-logo.png' , size: '185x50'), "/" %>
-</header>
+    <%= link_to image_tag('ECStore-logo.png' , size: '185x50', class: "page-logo"), "/" %>
+<%# </header> %>
 
 <%# 商品の概要 %>
 <div class="item-show">
