--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,7 +5,7 @@
       <ul>
         <li><%= link_to '会社概要（運営会社)', "#", class: "footer-link" %></li>
         <li><%= link_to 'プライバシーポリシー', "#", class: "footer-link" %></li>
-        <li><%= link_to 'FURIMA利用規約', "#", class: "footer-link" %></li>
+        <li><%= link_to 'ECStore利用規約', "#", class: "footer-link" %></li>
         <li><%= link_to 'ポイントに関する特約', "#", class: "footer-link" %></li>
       </ul>
     </div>
@@ -19,11 +19,11 @@
     <div class='furima-details'>
       <h2 class='footer-content-head'>ガイドライン</h2>
       <ul>
-        <li><%= link_to 'FURIMAガイド', "#", class: "footer-link" %></li>
-        <li><%= link_to 'FURIMAロゴ利用ガイドライン', "#", class: "footer-link" %></li>
+        <li><%= link_to 'ECStoreガイド', "#", class: "footer-link" %></li>
+        <li><%= link_to 'ECStore利用ガイドライン', "#", class: "footer-link" %></li>
         <li><%= link_to 'お知らせ', "#", class: "footer-link" %></li>
       </ul>
     </div>
   </div>
-  <p>© ECStore</p>
+  <%# <p>© ECStore</p> %>
 </footer>
