--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,18 +2,7 @@
 
 <div class="store-main">  <%# // 下メインメニュー %>
   <%# 左下 %>
-  <div class="side-menu"> 
-    <div class="categories">
-      <ul class="buysell" >買う
-        <li><%= link_to "キッズ", "#", class: "buy" %></li> 
-        <li><%= link_to "メンズ", "#", class: "buy" %></li> 
-        <%# ↑ここはカテゴリー一覧が表示されるように実装  %>
-      </ul>
-      <ul class="buysell" >売る
-        <li><%= link_to "出品", new_item_path, class: "sell" %></li> 
-      </ul>
-    </div>
-  </div>
+  <%= render "shared/side-menu" %>
   <%# // 左下 %>
   <%# 右下 %>
   <div class="items">
@@ -29,13 +18,14 @@
                 <div class='cart-item'>
                   <span class='cart-item-name'><%= cart_item.item.name %></span>
                 </div>
+            <%# <% end %>
                 <div class='cart-item-count'>
-                  <span class='cart-quantity'><%= cart_item.quantity %>個</span>
+                  <span class='cart-quantity'><%= cart_item.quantity %>点</span>
                   <%= link_to "削除", cart_item_path(cart_item.id), class: "cart-delete", method: :delete%>
                 </div>
               </div>
               <div class='cart-item-price'>
-                <span>¥ <%= (cart_item.item.price)*(cart_item.quantity) %></span>
+                <span>¥ <%= (cart_item.item.price) %></span>
               </div>
             <% end %>
           </li>
