--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,34 +1,11 @@
 <%= render "shared/header" %>
 
 <div class="store-main">  <%# // 下メインメニュー %>
+
   <%# 左下 %>
-  <div class="side-menu"> 
-    <div class="categories">
-      <ul class="buysell" >買う
-        <li><%= link_to "メンズ", "#", class: "buy" %></li> 
-        <li><%= link_to "レディース", "#", class: "buy" %></li> 
-        <li><%= link_to "ベビーキッズ", "#", class: "buy" %></li> 
-        <li><%= link_to "インテリア・住まい・小物", "#", class: "buy" %></li> 
-        <li><%= link_to "本・音楽・ゲーム", "#", class: "buy" %></li> 
-        <li><%= link_to "おもちゃ・ホビー・グッズ", "#", class: "buy" %></li> 
-        <li><%= link_to "家電・スマホ・カメラ", "#", class: "buy" %></li> 
-        <li><%= link_to "スポーツ・レジャー", "#", class: "buy" %></li> 
-        <li><%= link_to "ハンドメイド", "#", class: "buy" %></li> 
-        <li><%= link_to "その他", "#", class: "buy" %></li> 
-        <%# ↑ここはカテゴリー一覧が表示されるように実装  %>
-      </ul>
-      <ul class="buysell" >売る
-        <li><%= link_to "出品", new_item_path, class: "sell" %></li> 
-      </ul>
-      <% if user_signed_in? %>
-        <ul class="buysell" >カート
-          <%# <%= image_tag "cart.jpeg" ,class:"favorite-star-icon" ,width:"20",height:"20"%>
-          <li><%= link_to "カート", cart_path(@cart.user), class: "sell fas fa-shopping-cart fa-2x mycart" %></li>
-        </ul> 
-      <% end %>
-    </div>
-  </div>
+  <%= render "shared/side-menu" %>
   <%# // 左下 %>
+
   <%# 右下 %>
   <div class="items">
     <div class="page-name">商品一覧</div>
