--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -1,45 +1,8 @@
-<%# <%= render "shared/header" %> 
-
-<header> <%# // 上ヘッダーメニュー %>
-  <%# 左上 %>
-  <div class="store-header">
-    <div class="side-box">
-      <%= link_to 'ECStore', root_path, class: "store-name" %>
-    </div>
-  </div>
-  <%# // 左上 %>
-  <%# 右上 %>
-  <div class="main-header">
-    <div class="header-leftbox">
-      <ul class="top-list">
-      <% if user_signed_in? %>
-        <li><%= link_to current_user.nickname, "#", class: "menu" %></li> 
-        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "menu" %></li> 
-      <% else %>
-          <li><%= link_to 'ログイン', new_user_session_path, class: "menu" %></li> 
-          <li><%= link_to '新規登録', new_user_registration_path, class: "menu" %></li> 
-      <% end%>
-      </ul>
-    </div>
-    <a href="#" class="edit-btn">商品検索機能を付けたい</a>
-  </div>
-  <%# // 右上 %>
-</header>
+<%= render "shared/header" %>
 
 <div class="store-main">  <%# // 下メインメニュー %>
   <%# 左下 %>
-  <div class="side-menu"> 
-    <div class="categories">
-      <ul class="buysell" >買う
-        <li><%= link_to "キッズ", "#", class: "buy" %></li> 
-        <li><%= link_to "メンズ", "#", class: "buy" %></li> 
-        <%# ↑ここはカテゴリー一覧が表示されるように実装  %>
-      </ul>
-      <ul class="buysell" >売る
-        <li><%= link_to "出品", new_item_path, class: "sell" %></li> 
-      </ul>
-    </div>
-  </div>
+  <%= render "shared/side-menu" %>
   <%# // 左下 %>
   <%# 右下 %>
   <div class="items">
