--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,24 +2,7 @@
 
 <div class="store-main">  <%# // 下メインメニュー %>
   <%# 左下 %>
-  <div class="side-menu"> 
-    <div class="categories">
-      <ul class="buysell" >買う
-        <li><%= link_to "キッズ", "#", class: "buy" %></li> 
-        <li><%= link_to "メンズ", "#", class: "buy" %></li> 
-        <%# ↑ここはカテゴリー一覧が表示されるように実装  %>
-      </ul>
-      <ul class="buysell" >売る
-        <li><%= link_to "出品", new_item_path, class: "sell" %></li> 
-      </ul>
-      <% if user_signed_in? %>
-        <ul class="buysell" >カート
-          <%# <%= image_tag "cart.jpeg" ,class:"favorite-star-icon" ,width:"20",height:"20"%>
-          <li><%= link_to "カート", cart_path(@cart.user), class: "sell" %></li> 
-        </ul> 
-      <% end %>
-    </div>
-  </div>
+  <%= render "shared/side-menu" %>
   <%# // 左下 %>
   <%# 右下 %>
   <div class="items">
