--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,25 @@
   <%# // 左下 %>
   <%# 右下 %>
   <div class="items">
+
+    <div class="Card__title">
+      <h2>登録済みカード情報</h2>
+    </div>
+    <div class="Card_info">
+      【カード番号】
+      <br>
+      <%= "**** **** **** " + @card[:last4] %>
+      <%# カード番号の下4桁を取得 %>
+      <br>
+      【有効期限】
+      <br>
+      <%= @card[:exp_month] %>
+      <%# 有効期限の「月」を取得 %>
+      /
+      <%= @card[:exp_year] %>
+      <%# 有効期限の「年」を取得 %>
+    </div>
+
     <div class="page-name">マイページ</div>
       <%# 自分の出品した商品 %>
         <% @items.each do |item| %>
