メインページCSSの修正

--- a/app/assets/stylesheets/carts/show.css
+++ b/app/assets/stylesheets/carts/show.css
@@ -1,10 +1,10 @@
-.page-name{
+/* .page-name{
   width: 100%;
   font-size: 40px;
   margin: 0 0 50px 30px;
   display: flex;
   /* flex-wrap: wrap; */
-}
+
 
 .cart-list {
   width: 100%;
