--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -6,7 +6,7 @@
   <%# // 左下 %>
   <%# 右下 %>
   <div class="items">
-    <div class="page-name">ショッピングカート</div>
+    <div class="page-name fas fa-shopping-cart fa-2x mycart">ショッピングカート</div>
       <%# 商品一覧が表示されるように記載 %>
         <% @cart_items.each do |cart_item| %>
           <li class='cart-list'>
