詳細画面のヘッダー修正

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,7 +20,7 @@
       <% end%>
       </ul>
     </div>
-    <a href="#" class="edit-btn">商品検索機能を付けたい</a>
+    <a href="#" class="edit-btn">商品検索</a>
   </div>
   <%# // 右上 %>
 </header>
