--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -24,22 +24,19 @@
     </div>
     <%# /購入内容の表示 %>
 
-    <div class="Card__title">
-      <h2>使用カード情報</h2>
-    </div>
-    <div class="Card_info">
-      【カード番号】
-      <br>
-      <%= "**** **** **** " + @card[:last4] %>
-      <%# カード番号の下4桁を取得 %>
-      <br>
-      【有効期限】
-      <br>
-      <%= @card[:exp_month] %>
-      <%# 有効期限の「月」を取得 %>
-      /
-      <%= @card[:exp_year] %>
-      <%# 有効期限の「年」を取得 %>
+    <div class="lists">お支払いカード
+      <div class="card_info">
+            【クレジットカード番号】
+            <br>
+            <%= "**** **** **** " + @card[:last4] %>
+            <br>
+            【有効期限】
+            <br>
+            <%= @card[:exp_month] %>
+            <%# 有効期限の「月」を取得 %>月
+            <%= @card[:exp_year] %>
+            <%# 有効期限の「年」を取得 %>年
+          </div>
     </div>
 
     <%# 支払額の表示 %>
