トップページの微調整

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,7 +10,7 @@
   <div class="items">
     <div class="page-name">商品一覧</div>
     
-    <div class="lists">⭐️販売中</div>
+    <div class="lists">⭐️販売中の商品一覧</div>
       <%# 商品一覧が表示されるように記載 %>
       <% @items.each do |item| %>
         <% if user_signed_in? %>
