決済画面の軽微な修正

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -24,7 +24,7 @@
     </div>
     <%# /購入内容の表示 %>
 
-    <div class="lists">お支払いカード
+    <div class="lists">お支払いクレジットカード
       <div class="card_info">
             【クレジットカード番号】
             <br>
