--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -78,7 +78,7 @@
   </div>
   <div class='register-btn'>
     <%# <%= f.submit "会員登録" ,class:"register-red-btn" %>
-    <%= f.submit "Next" %>
+    <%= f.submit "配送先住所の登録へ", class:"register-red-btn" %>
   </div>
   <p class='register-info'>本人情報の登録について</p>
 </div>
