--- a/app/views/devise/registrations/create_address.html.erb
+++ b/app/views/devise/registrations/create_address.html.erb
@@ -1,2 +1,15 @@
-<h2>登録が完了しました</h2>
-<%= link_to "トップへ戻る", root_path%>
+<%# <%= render "shared/header" %>
+
+<div class="store-main">  <%# // 下メインメニュー %>
+  <%# 左下 %>
+  <%# <%= render "shared/side-menu" %>
+  <%# // 左下 %>
+  <%# 右下 %>
+  <div class="items">
+    <div class="ordered">登録が完了しました</div>
+      <div><%= link_to "買い物を始める", "/", class: "toppage" %></div>
+  </div>
+  <%# 右下 %>
+</div>
+
+<%# <%= render "shared/footer" %>
