--- a/app/views/devise/registrations/new_address.html.erb
+++ b/app/views/devise/registrations/new_address.html.erb
@@ -1,21 +1,35 @@
-<h2>住所情報登録</h2>
+<%= render "shared/header" %>
 
 <%= form_for @address do |f| %>
-  <%= render "devise/shared/error_messages", resource: @address %>
+<%# <%= render "devise/shared/error_messages", resource: @address %>
 
-  <div class="field">
-    <%= f.label :postal_code %><br />
-    <%= f.text_field :postal_code %>
+<div class='form-wrap'>
+  <div class='form-header'>
+    <h1 class='form-header-text'>
+      住所情報登録
+    </h1>
   </div>
 
-  <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address %>
-  </div>
+  <%= render 'shared/error_messages', model: f.object %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">郵便番号</label>
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_field :postal_code, class:"input-default", id:"nickname", placeholder:"例) 0123456", maxlength:"7", autofocus: true  %>
+    </div>
+    <div class="form-group">
+      <div class='form-text-wrap'>
+        <label class="form-text">配送先住所</label>
+        <span class="indispensable">必須</span>
+      </div>
+      <%= f.text_field :address, class:"input-default", id:"nickname", placeholder:"例) 東京都新宿区〇〇町1-2-3", maxlength:"40", autofocus: true  %>
+    </div>
+
+    <div class='register-btn'>
+      <%= f.submit "会員登録完了",class:"register-red-btn"  %>
+    </div>
+</div>
+
 <% end %>
-
-<%= render "devise/shared/links" %>
