--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -15,19 +15,23 @@
       </span>
     </div>
 
-    <% if current_user.id == @item.user.id %>
-      <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
-      <p class="or-text">or</p>
-      <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
+    <% if user_signed_in? %>
+      <% if current_user.id == @item.user.id %>
+        <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
+        <p class="or-text">or</p>
+        <%= link_to "削除", item_path, method: :delete, class:"item-destroy" %>
+      <% else %>
+        <div class="cart">
+          <%= form_with model: @cart_item, url: cart_items_path, local: true do |f|%>   <%# 送信先を変えられないか？ 同じ商品（の数）を更新できるようにしたい %>
+            <%= f.label :quantity, "数量"%>
+            <%= f.select :quantity, [1,2,3,4,5,6,7,8,9,10] %>
+            <%= f.hidden_field :item_id, value: @item.id %>
+            <%= f.submit "カートに追加", class:"item-red-btn" %>
+          <% end %>
+        </div>
+      <% end %>
     <% else %>
-      <div class="cart">
-        <%= form_with model: @cart_item, url: cart_items_path, local: true do |f|%>   <%# 送信先を変えられないか？ 同じ商品（の数）を更新できるようにしたい %>
-          <%= f.label :quantity, "数量"%>
-          <%= f.select :quantity, [1,2,3,4,5,6,7,8,9,10] %>
-          <%= f.hidden_field :item_id, value: @item.id %>
-          <%= f.submit "カートに追加", class:"item-red-btn" %>
-        <% end %>
-      </div>
+      <%= link_to "会員登録してこの商品を買う", new_user_registration_path, method: :get, class: "item-red-btn" %>
     <% end %>
 
 
